[package]
name = "QTSim"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_distr = "0.5.0"
rand = "0.9.0"
# plotly = { version = "0.11", features = ["kaleido"] }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
indicatif = { version = "0.17.7", features = ["rayon"]}
rayon = "1.10.0"
plotters = "0.3.3"
num_cpus = "1.16.0"
thiserror = "2.0.12"
# nannou = "0.19.0"
